# ClimatePrice

./: .envrc-example  .gitignore  .pre-commit-config.yaml  .python-version  03_pipeline.py  CHECKLIST.md  MAKEFILE  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ENGINEERING.md  ROADMAP.md
src/: 01_synthetic_data.py  04_app.py
src/scripts/: extract_iris.py
tests/: test_pipeline.py
