[project]
name = "climateprice"
version = "0.1.0"
description = "Climate-adjusted property investment verdicts for Paris (Le Wagon bootcamp MVP)"
requires-python = ">=3.10"
dependencies = [
    "geopandas",
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "streamlit",
    "pydeck",
    "pandera>=0.32.1",
    "py7zr>=1.1.3",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "pre-commit"]

# ============================== RUFF ==============================
[tool.ruff]
line-length = 100          # 88 is dogma, 100 is comfortable for data code
target-version = "py310"
exclude = [
    "data",                # datasets, never lint
    "notebooks",           # exploration is allowed to be messy
    ".venv",
    "*.ipynb",
]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle errors/warnings (the classics)
    "F",        # pyflakes: undefined names, unused imports — real bug catchers
    "I",        # isort: auto-sorted imports, kills a whole class of diff noise
    "B",        # bugbear: mutable default args, useless comprehensions
    "UP",       # pyupgrade: modern syntax
    "PD",       # pandas-vet: catches df.ix, inplace=True traps
    "NPY",      # numpy-specific gotchas
]
ignore = [
    "E501",     # line length — handled by the formatter, don't double-flag
    "PD010",    # pivot_table preference — irrelevant for us
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["B011"]     # assert False allowed in tests

[tool.ruff.format]
quote-style = "double"

# ============================= PYTEST =============================
[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

# ============================ COVERAGE ============================
[tool.coverage.run]
omit = ["test_*.py", "01_synthetic_data.py", "04_app.py"]
# app excluded: Streamlit UI is checked by eyes, not coverage
